# fulcheranalyzer

./: .gitignore  .readthedocs.yaml  404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml
ARCHAEOLOGY/: index.html
REFACTOR_STATUS/: index.html
api/: index.html
archive/liptak_refactor/: README.md
archive/sphinx_docs/source/: fulcheranalyzer.rst  (+1 more)
data_molecular/: excitation_vibrational_energy.txt  excitation_vibrational_energy_D2.txt  franck_condon_factor_D2.txt  fulcher-α_band_wavelength.txt  vibrational_energy.txt  vibrational_energy_D2.txt
docs/: .buildinfo  ARCHAEOLOGY.md  REFACTOR_STATUS.md  api.md  fulcheranalyzer.coronalmodel.html  fulcheranalyzer.html  genindex.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.md  workflow.md
docs/_modules/: index.html
docs/_sources/: modules.rst.txt
docs/examples/: CoronaModelExample.html  index.html
docs/physics/: boltzmann.md  coronal_model.md  index.md
docs/source/: conf.py  index.rst
docs/src/: fulcher_analyser.rst  fulcher_analyser.spectrum.rst
docs/styles/: brand.css
examples/: CoronalModel-D-H.ipynb  load_spectra.ipynb
fulcheranalyzer/: coronalmodel.py
physics/: index.html
physics/boltzmann/: index.html
physics/coronal_model/: index.html
search/: search_index.json
src/fulcher_analyser/: __init__.py  __main__.py  spectrum.py
src/fulcher_analyzer/: __init__.py  _constants.py  _utils.py  boltzmann.py  coronal_model.py  coronalmodel.py  intensity_io.py  molecular_constants.py  plotting.py
tests/: test_paper_reproduction.py  test_smoke.py
usage/: index.html
workflow/: index.html
(+20 files in other folders)
