[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnlecture"
version = "0.0.1"
authors = [
  { name="A. K.", email="queezz@gmail.com" },
]
description = "A small package to visualize some of the mathematics of complex numbers."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""