[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fulcher-analyzer"
version = "0.1.0"
authors = [
  { name="A. K.", email="queezz@gmail.com" },
]
description = "Molecular hydrogen Fulcher-alpha emission analyzer: line extraction, Boltzmann fitting, and coronal model reconstruction."
readme = "Readme.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipykernel",
    "jinja2",
    "jupyter",
    "pytest",
]
spectrum = ["xarray"]

[project.urls]
"Homepage" = "https://github.com/queezz/fulcheranalyzer"

[tool.hatch.build.targets.wheel]
packages = ["src/fulcher_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
